modifying SchoolMapper